--- a/vignettes/SquareWindowPlots.Rmd
+++ b/vignettes/SquareWindowPlots.Rmd
@@ -344,7 +344,7 @@ mitochondrial genome as I forgot to remove it.
 mkOxPlotWindow(gbs$Cni_Cbr, centre = 'maxwidth') + ggtitle("Caenorhabditis nigoni vs C. briggsae (61% aligned, 85% identity)")
 ```
 
-```{r Cbr_Cni_win, dev='svg', fig.ext='svg'}
+```{r Cbr_Cni_win, dev=c('svg', 'pdf'), fig.ext=c('svg', 'pdf')}
 mkOxPlotWindow(gbs$Cbr_Cni, centre = 'maxwidth') + ggtitle("Caenorhabditis briggsae vs C. nigoni (69% aligned, 85% identity)")
 ```
 
@@ -357,7 +357,7 @@ assembly `GCA_001643735.4`.
 mkOxPlotWindow(gbs$Cni_Cre, centre = 'maxwidth') + ggtitle("Caenorhabditis nigoni vs C. remanei (25% aligned, 73% identity)")
 ```
 
-```{r Cbr_Cre_win, dev='svg', fig.ext='svg'}
+```{r Cbr_Cre_win, dev=c('svg', 'pdf'), fig.ext=c('svg', 'pdf')}
 mkOxPlotWindow(gbs$Cbr_Cre, centre = 'maxwidth') + ggtitle("Caenorhabditis briggsae vs C. remanei (30% aligned, 72% identity)")
 ```
 
@@ -369,6 +369,6 @@ mkOxPlotWindow(gbs$Cni_Cin, centre = 'maxwidth') + ggtitle("Caenorhabditis nigon
 
 ## _C. briggsae vs _C. elegans_
 
-```{r Cbr_Cel_win, dev='svg', fig.ext='svg'}
+```{r Cbr_Cel_win, dev=c('svg', 'pdf'), fig.ext=c('svg', 'pdf')}
 mkOxPlotWindow(gbs$Cbr_Cel, centre = 'maxwidth') + ggtitle("Caenorhabditis briggsae vs C. elegans (23% aligned, 72% identity)")
 ```
