--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -197,7 +197,10 @@ Versus Oki
 ```
 
 ```{r orthopair_plot_Oki_Kum, fig.height=8, fig.width=8,  dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
-(p5 <- orthoPairs$Oki_Kum |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) |> swap()  |> makeOxfordPlots(type='point', diag=T) + theme_bw() + theme(legend.position='none')  + ggtitle(NULL))
+(p5 <- orthoPairs$Oki_Kum |> swap() |> scaffoldByFlipAndMerge(scafs$Kum_Oki, drop = TRUE) |>
+    removeUplacedCongits() |> 
+    makeOxfordPlots(type='point', diag=T) + theme_bw() + theme(legend.position='none') +
+   scale_color_manual(values = c("#E78AC3", "#A6D854", "#FFD92F", "#8DA0CB", "#66C2A5")) + ggtitle(NULL))
 ```
 
 Collinear regions
