--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -167,18 +167,20 @@ Versus Osa
 ----------
 
 ```{r orthopair_plot_Oki_Osa}
-p1 <- orthoPairs$Oki_Osa |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) |> swap() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) |> swap() |> makeOxfordPlots(type='point', diag = F) + theme_bw() + theme(legend.position='none') + scale_color_manual(values = c("#E78AC3", "#A6D854", "#FFD92F", "#8DA0CB", "#66C2A5")) + ggtitle(NULL)
+p1 <- orthoPairs$Oki_Osa |> removeUnplacedContigs() |>
+  makeOxfordPlots(type='point', diag = F) + theme_bw() + theme(legend.position='none') +
+  scale_color_manual(values = c("#E78AC3", "#A6D854", "#FFD92F", "#8DA0CB", "#66C2A5")) + ggtitle(NULL)
 ```
 
 ```{r orthopair_plot_Bar_Osa}
-p2 <- orthoPairs$Bar_Osa |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) |> swap() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) |> swap() |> makeOxfordPlots(type='point', diag=F) + theme_bw() + theme(legend.position='none') + scale_color_manual(values = c("#E78AC3", "#A6D854", "#FFD92F", "#8DA0CB", "#66C2A5")) + ggtitle(NULL)
+p2 <- orthoPairs$Bar_Osa |> removeUnplacedContigs() |>
+  makeOxfordPlots(type='point', diag=F) + theme_bw() + theme(legend.position='none') +
+  scale_color_manual(values = c("#E78AC3", "#A6D854", "#FFD92F", "#8DA0CB", "#66C2A5")) + ggtitle(NULL)
 ```
 
 ```{r orthopair_plot_Aom_Osa}
-p3 <- orthoPairs$Osa_Aom |>
-  plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) |>
-  swap() |>
-  scaffoldByFlipAndMerge(scafs$Aom_Osa, drop = TRUE) |>
+p3 <- orthoPairs$Osa_Aom |> swap() |>
+  scaffoldByFlipAndMerge(scafs$Aom_Osa, drop = TRUE) |> removeUnplacedContigs() |>
   makeOxfordPlots(type='point', diag=F) +
     theme_bw() +
     theme(legend.position='none') + ggtitle(NULL) +
@@ -193,12 +195,14 @@ Versus Oki
 ----------
 
 ```{r orthopair_plot_Oki_Bar}
-(p4 <- orthoPairs$Bar_Oki |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) |> swap() |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) |> swap() |> makeOxfordPlots(type='point', diag = F) + theme_bw() + theme(legend.position='none') + scale_color_manual(values = c("#E78AC3", "#A6D854", "#FFD92F", "#8DA0CB", "#66C2A5")) + ggtitle(NULL))
+(p4 <- orthoPairs$Bar_Oki |> removeUnplacedContigs() |>
+   makeOxfordPlots(type='point', diag = F) + theme_bw() + theme(legend.position='none') +
+   scale_color_manual(values = c("#E78AC3", "#A6D854", "#FFD92F", "#8DA0CB", "#66C2A5")) + ggtitle(NULL))
 ```
 
 ```{r orthopair_plot_Oki_Kum, fig.height=8, fig.width=8,  dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
 (p5 <- orthoPairs$Oki_Kum |> swap() |> scaffoldByFlipAndMerge(scafs$Kum_Oki, drop = TRUE) |>
-    removeUplacedCongits() |> 
+    removeUnplacedContigs() |> 
     makeOxfordPlots(type='point', diag=T) + theme_bw() + theme(legend.position='none') +
    scale_color_manual(values = c("#E78AC3", "#A6D854", "#FFD92F", "#8DA0CB", "#66C2A5")) + ggtitle(NULL))
 ```
