Prepare for merge.

--- a/vignettes/ScalingBreakpoints.Rmd
+++ b/vignettes/ScalingBreakpoints.Rmd
@@ -26,8 +26,10 @@ pair by a few key metrics:
 * Branch length (i.e., a kind of substitution rate)
 * dN/dS
 
-**Panel D of Figure 7 was generated with this vignette (colors were edited by
+**Panel E of Figure 7 was generated with this vignette (colors were edited by
 hand).**
+
+**The vignette also produce trees, which were edited for panels 7A–D.**
 
 The core functions used here are maintained in our _GenomicBreaks_ R package,
 which is fully documented at: <https://oist.github.io/GenomicBreaks>.
@@ -112,6 +114,11 @@ species$Caenorhabditis$tip.label <- c('Cel', 'Cin', 'Cre', 'Cni', 'Cbr')
 write.tree(species$Caenorhabditis)
 species$Caenorhabditis <- as.treedata(species$Caenorhabditis)
 plotTree(species$Caenorhabditis)
+```
+
+```{r species_trees_Caeno_4, fig.height=6, fig.width=6, message=FALSE, warning=FALSE, dev=c("svg", "png", "pdf"), fig.ext=c('svg', 'png', 'pdf')}
+
+
 ```
 
 ## Distances
